fix(snackbar): icon alignment

--- a/packages/react-components/src/components/snackbar/snackbar.module.css
+++ b/packages/react-components/src/components/snackbar/snackbar.module.css
@@ -51,11 +51,9 @@
     color: var(--snackbar-fg);
 
     /* stylelint-disable-next-line number-max-precision */
-    margin-top: 0.2rem;
+    margin-top: -0.15rem;
 
     &[data-snackbar-has-title='true'] {
-
-      /* stylelint-disable-next-line number-max-precision */
       margin-top: 0;
     }
   }
